# rust-distributed-mesh

./: .gitignore  CLAUDE.md  Cargo.toml  OPERATING.md  README.md
admin-ui/: Cargo.toml
admin-ui/src/: main.rs
admin-ui/web/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/web/src/: App.tsx  SpawnBar.tsx  api.ts  main.tsx  theme.css
admin-ui/web/src/tabs/: Alerts.tsx  BootWaterfall.tsx  Chaos.tsx  Heartbeat.tsx  Messages.tsx  Nodes.tsx  Tests.tsx  Timeline.tsx  Topology.tsx
bridge/: .env.dev  Cargo.toml
bridge/src/: main.rs
broker/: .env.dev  Cargo.toml
broker/src/: main.rs
cli/rfa/: Cargo.toml
cli/rfa/src/: main.rs
compute/: Cargo.toml
compute/src/: main.rs
crates/rafka-chaos/: Cargo.toml
crates/rafka-chaos/src/: lib.rs  primitives.rs  soak.rs
crates/rafka-mesh-ops/: Cargo.toml
crates/rafka-mesh-ops/src/: framer.rs  lib.rs
crates/rafka-mesh-transport/: Cargo.toml
crates/rafka-mesh-transport/src/: lib.rs
crates/rafka-node-base/: Cargo.toml
crates/rafka-node-base/src/: deployment.rs  lib.rs  load.rs
crates/rafka-telemetry/: Cargo.toml
crates/rafka-telemetry/src/: lib.rs
crates/rfa/: Cargo.toml
deployment/dev/: docker-compose.otlp.yml
docs/agents/: README.md  rust-whiz-kid.md
docs/architecture/: mesh.md
docs/design/system-mesh-v1/: DESIGN-README.md  chat1.md  chat2.md
docs/design/system-mesh-v1/project/: .design-canvas.state.json  acls-audit.jsx  app.jsx  cluster-overview-a.jsx  cluster-overview-b.jsx  connectors.jsx  consumer-groups.jsx  flink-jobs.jsx  fuel-screens.jsx  index.html  rafka-cms.jsx  rafka-screens-bundle.html  schema-registry.jsx  screens-app.jsx  screens-print.html  screens.css  screens.html  sections-2.jsx  sections.jsx  shell.jsx  sql-editor-alts.jsx  sql-editor.jsx  styles.css  system-overview.jsx  topic-browser.jsx
docs/eng/: rafka-golden-principles.md
docs/evidence/: 1h-soak-seed-1400.json  1h-soak-seed-2100-full-pool.json  1h-soak-seed-2400-9-prim.json  1h-soak-seed-800.json  2h-soak-seed-2200-full-pool.json  30min-soak-seed-900.json  3h-soak-seed-2500-9-prim.json
docs/features/boot-chain/: how-to.md  overview.md  runbook.md
docs/features/chaos-harness/: how-to.md  overview.md  runbook.md
docs/features/chaos-timeline/: how-to.md  overview.md  prd.md  runbook.md
docs/features/cross-service-tracing/: how-to.md  overview.md  runbook.md
docs/features/frame-exchange/: how-to.md  overview.md  runbook.md
docs/features/heartbeat/: how-to.md  overview.md  runbook.md
docs/features/mesh-to-mesh/: how-to.md  overview.md  runbook.md
docs/features/node-base/: how-to.md  overview.md  runbook.md
docs/features/peer-discovery/: how-to.md  overview.md  runbook.md
docs/features/rafka-admin-ui/: SPEC.md  final-state.md  how-to.md  overview.md  prd.md  qa-round-1.md  qa-round-final.md  qa-round-postfix-2026-05-21.md  red-team-round-2026-05-21.md  redteam-round-1.md  runbook.md  test-registry.md
docs/features/rfa-cli/: how-to.md  overview.md  runbook.md
docs/features/spawned-list/: how-to.md  overview.md  runbook.md
docs/features/subprocess-control/: how-to.md  overview.md  runbook.md
docs/features/telemetry-substrate/: how-to.md  overview.md  runbook.md
docs/features/topology-ui-waterfall/: how-to.md  overview.md  runbook.md
docs/plans/: hub-spoke-event-driven-gossip.md
docs/plans/mesh-v1/: 01-substrate-prd.md  02-topology-ui-prd.md  03-rfa-cli-prd.md  04-chaos-harness-prd.md  05-sprint-plan.md  06-decisions.md  07-cpu-optimization-plan.md  08-cpu-optimization-walkthrough.md
docs/plans/streaming-v1/: 00-architecture-design.md
docs/sprints/sprint-01/: agent-dispatch-prompt.md  sprint-config.json  sprint-prd.md  sprint-prompt.md
docs/sprints/sprint-02/: sprint-config.json
docs/sprints/sprint-03/: sprint-config.json
docs/sprints/sprint-04/: sprint-config.json
docs/sprints/sprint-05/: sprint-config.json
docs/sprints/sprint-06/: sprint-config.json
docs/sprints/sprint-07/: sprint-config.json
docs/sprints/sprint-08/: sprint-config.json
docs/sprints/sprint-09/: sprint-config.json
docs/sprints/sprint-10/: sprint-config.json
gateway/: .env.dev  Cargo.toml
gateway/src/: main.rs
registry/: Cargo.toml
registry/src/: main.rs
topology-ui/: Cargo.toml
topology-ui/src/: main.rs
