[workspace]
members = [
    "crates/rafka-telemetry",
    "crates/rafka-mesh-transport",
    "crates/rafka-mesh-ops",
    "crates/rafka-node-base",
    "crates/rafka-chaos",
    "gateway",
    "broker",
    "compute",
    "registry",
    "bridge",
    "admin-ui",
    "cli/rfa",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28"

# opentelemetry
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"

# iroh — latest stable non-RC at sprint-02 open (0.35 was used in sprint-01;
# 1.0.0-rc.0 exists but is a release candidate; 0.95.1 is latest stable)
iroh = { version = "0.91", features = ["discovery-local-network"] }

# identity persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
anyhow = "1"

# encoding
hex = "0.4"
rand = "0.8"
bincode = { version = "2", features = ["serde"] }
dashmap = "6"

# TEMPORARY: patch iroh-quinn-proto 0.13.0 to a locally-forked branch that
# backports the GSO/tail-loss-probe segment-size assertion fix. The upstream
# panic `assertion failed: untracked_bytes <= segment_size as u64` at
# iroh-quinn-proto-0.13.0/src/connection/mod.rs:654 fires under heavy
# concurrent stream load (Plumtree dissemination at ~18 nodes). Local fix
# branch lives at E:/dev/iroh-quinn-proto_fix/iroh-quinn (branch
# fix/backport-gso-tlp-panic).
#
# REMOVE THIS BLOCK AS PART OF THE PLANNED iroh 1.0 BUMP: the iroh team
# released 1.0.0-rc.1 on 2026-05-25 (rc.0 on 2026-05-21) and renamed
# iroh-quinn-proto to `noq-proto`. Once we bump iroh + iroh-gossip to
# 1.0.0, both the panic AND the crate-name rename are addressed upstream
# and this patch becomes redundant. Track in a follow-on branch
# `chore/bump-iroh-1.0`.
[patch.crates-io]
iroh-quinn-proto = { path = "E:/dev/iroh-quinn-proto_fix/iroh-quinn/quinn-proto" }
