[workspace]
members = [
    "crates/rafka-telemetry",
    "crates/rafka-mesh-transport",
    "crates/rafka-mesh-ops",
    "crates/rafka-node-base",
    "crates/rafka-chaos",
    "gateway",
    "broker",
    "compute",
    "registry",
    "bridge",
    "admin-ui",
    "cli/rfa",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28"

# opentelemetry
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"

# iroh 0.98 — iroh team confirmed 0.91 / iroh-quinn-proto 0.13.0 has a real
# perf bug at scale (18 nodes pegged an 80-logical-core box at ~92%). 0.98
# fixes both the perf and the GSO/TLP debug-assertion panic. Feature
# `discovery-local-network` was renamed to `address-lookup-mdns` in 0.98.
iroh = { version = "0.98", features = ["address-lookup-mdns"] }

# identity persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
anyhow = "1"

# encoding
hex = "0.4"
rand = "0.8"
bincode = { version = "2", features = ["serde"] }
dashmap = "6"

# iroh-quinn-proto patch block removed on the iroh 0.98 bump: the
# GSO/TLP segment-size assertion is fixed upstream as of 0.98's bundled
# iroh-quinn-proto, so the local fork override is no longer needed.
