[workspace]
members = [
    "crates/rafka-telemetry",
    "crates/rafka-mesh-transport",
    "crates/rafka-mesh-ops",
    "crates/rafka-node-base",
    "crates/rafka-chaos",
    "gateway",
    "broker",
    "compute",
    "registry",
    "bridge",
    "admin-ui",
    "cli/rfa",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28"

# opentelemetry
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"

# iroh 1.0.0-rc.1 + iroh-gossip 0.100 — bumped to pick up the iroh-gossip
# passive-peer eviction fix (handle_connection_closed now removes dead peers
# from passive_view + peer_data) that resolves the per-node_id memory leak
# under churn observed on 0.98. See windows-findings.md / linux-findings.md.
iroh = { version = "1.0.0-rc.1" }

# identity persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
anyhow = "1"

# encoding
hex = "0.4"
rand = "0.8"
bincode = { version = "2", features = ["serde"] }
dashmap = "6"

# iroh-quinn-proto patch block removed on the iroh 0.98 bump: the
# GSO/TLP segment-size assertion is fixed upstream as of 0.98's bundled
# iroh-quinn-proto, so the local fork override is no longer needed.

[patch.crates-io]
# Churn-memory-leak fixes live in standalone repos at E:/<repo> (branch
# fix/churn-memory-leak), one clone per upstream crate — no nested vendor/ copies.
# Each crate-family is patched from its OWN repo so iroh + iroh-base resolve to one
# source (else cargo double-sources iroh-base -> two PublicKey types), same for noq*.
# To publish PRs: push each repo's branch to a fork and swap `path` -> `git`+`branch`.
iroh = { path = "E:/iroh/iroh" }
iroh-base = { path = "E:/iroh/iroh-base" }
iroh-gossip = { path = "E:/iroh-gossip" }
noq = { path = "E:/noq/noq" }
noq-proto = { path = "E:/noq/noq-proto" }
noq-udp = { path = "E:/noq/noq-udp" }
