[package]
name = "rafka-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rafka-bridge"
path = "src/main.rs"

[dependencies]
dhat = { version = "0.3", optional = true }
rafka-node-base = { path = "../crates/rafka-node-base" }
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
dhat-heap = ["dep:dhat"]
