[package]
name = "rafka-topology-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rafka-topology-ui"
path = "src/main.rs"

[dependencies]
rafka-telemetry = { path = "../crates/rafka-telemetry" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = "0.8.9"
tower-http = { version = "0.6.11", features = ["cors"] }
reqwest = { version = "0.13.3", features = ["json"] }
dashmap = { workspace = true }
rand = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = "0.27"
tracing-opentelemetry = { workspace = true }
http = "1"
urlencoding = "2"
