[package]
name = "rafka-mesh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
iroh.workspace = true
iroh-gossip = "0.91"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
