[package]
name = "rafka-mesh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
futures-lite = "2"
tracing = { workspace = true }
iroh.workspace = true
iroh-gossip = "0.100"
iroh-mdns-address-lookup = "0.3.0"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
